[package]
name = "raft-examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raft = {path = "../raft"}
raft-macro = { path = "../raft-macro" }
tonic = "0.8"
prost = "0.11"
async-trait = "0.1.58"
dashmap = "5.4.0"
tokio = { version = "1.0", features = ["full", "rt-multi-thread"] }

[build-dependencies]
raft-macro = { path = "../raft-macro" }
tonic-build = "0.8"
