[package]
name = "replicate-log"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
test_type_unit = ["replicate/test_type_unit"]
test_type_integration = ["replicate/test_type_integration"]

[dependencies]
replicate = {path = "../replicate" }
bincode = "1.3.3"
serde = { version = "1.0.152", features = ["derive"] }
