[package]
name = "replicate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
replicate-macro = { path = "../replicate-macro" }
dashmap = "5.4.0"
tonic = "0.8"
prost = "0.11"
tokio = { version = "1.0", features = ["full", "rt-multi-thread"] }
async-trait = "0.1.58"
tokio-threadpool = "0.1.18"
rand = "0.8.5"

[build-dependencies]
replicate-macro = { path = "../replicate-macro" }
tonic-build = "0.8"
